--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           </p>
         </div>        
         <button>Inscreva-se na mentoria</button>  
-     </section>
-     <section class="container">
-      <h2>O que você vai aprender</h2>
+      </section>
+      <section class="container">
+        <h2>O que você vai aprender</h2>
         <div class="grid">
           <div class="grid-cards">
             <img src="assets/icons/target.svg" alt="" class="icon">
@@ -60,7 +60,22 @@
           </div>
           <img src="" alt="">
         </div>
-     </section>
+      </section>
+      <section class="challenge">
+        <figure>  
+          <img src="assets/images/trilha-challenge.png" alt="">
+        </figure>
+        <div class="content-challenge">          
+          <h1>#TrilhaChallenge</h1>
+          <p>O #TrilhaChallenge é uma experiência prática onde você vai transformar um layout profissional em um site funcional — 
+          do jeitinho que acontece no mercado. <br>
+          Você vai receber um layout exclusivo criado no Figma, junto com orientações e prazos para colocar a mão no código. Seu objetivo? 
+          Reproduzir o layout com fidelidade, aplicando boas práticas de HTML, CSS e JavaScript (ou a stack que você estiver aprendendo). 
+          É mais que um exercício: é um passo real rumo ao seu portfólio profissional.
+          </p>
+          <button>Cadastre-se</button>
+        </div>  
+      </section>
     </main>
 </body>
 </html>
