sections learning topics and congratulations

--- a/index.html
+++ b/index.html
@@ -76,6 +76,45 @@
           <button>Cadastre-se</button>
         </div>  
       </section>
+      <section class="learning-topics">
+        <div class="box-content">
+          <div class="title-box">
+            <h4>O que vou aprender no desafio?</h4>
+          </div>
+          <div class="learning-box">
+            <ul>
+              <li>
+                1. Escolher uma área pra começar <br> Frontend, Backend, Mobile ou Dados — com orientação
+                pra entender qual faz mais sentido pra você.
+              </li>
+              <li>
+                2. Aprender os fundamentos certos <br>Nada de pular etapas. Vamos trabalhar lógica, 
+                sintaxe, comandos básicos, ferramentas e boas práticas.
+              </li>  
+              <li>
+                3. Praticar com projetos reais <br> Você vai colocar a mão no código em desafios 
+                práticos com HTML, CSS, JS, o  u o que fizer sentido na sua trilha.
+              </li>
+              <li>
+                4. Publicar seu primeiro projeto no GitHub e no Vercel <br> Além de aprender a 
+                programar, você vai criar um portfólio pra mostrar que sabe fazer.
+              </li>
+            </ul>
+          </div>
+          <div class="footer-box">
+          </div>
+        </div>
+      </section>
+      <section class="congratulations">
+        <div class="text-background">
+          <h1>Parabéns!</h1>
+          <p>Obrigado por se inscrever! Em breve, você receberá 
+            conteúdos exclusivos e dicas valiosas para otimizar seu site. Fique atento ao seu e-mail!
+          </p> 
+          <p>Estamos empolgados para tê-lo conosco nessa jornada. Se precisar de algo, não hesite em nos contatar!</p>
+
+        </div>
+      </section>
     </main>
 </body>
 </html>
