sections social-media and whatsapp

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
         <h2>O que você vai aprender</h2>
         <div class="grid">
           <div class="grid-cards">
-            <img src="assets/icons/target.svg" alt="" class="icon">
+            <img src="assets/icons/target.svg" alt="ícone de alvo" class="icon">
             <h4>Direção clara</h4>
             <p>Descubra o que estudar primeiro, sem perder tempo pulando de curso em curso.</p>
           </div>
           <div class="grid-cards">
-            <img src="assets/icons/web-development.svg" alt="" class="icon">
+            <img src="assets/icons/web-development.svg" alt="ícone de monitor desktop" class="icon">
             <h4>Escolha de área</h4>
             <p>Entenda se você tem mais perfil para Frontend, Backend, Mobile ou Dados.</p>
           </div>
           <div class="grid-cards">
-            <img src="assets/icons/target.svg" alt="" class="icon">
+            <img src="assets/icons/duvida.svg" alt="icone de conversa em grupo" class="icon">
             <h4>Espaço para dúvidas</h4>
             <p>Aqui você pode perguntar sem medo e receber respostas humanas e diretas.</p>
           </div>
           <div class="grid-cards">
-            <img src="assets/icons/target.svg" alt="" class="icon">
+            <img src="assets/icons/smartphone.svg" alt="ícone de smartphone" class="icon">
             <h4>Responsividade</h4>
             <p>Como adaptar seu site para o mobile.</p>
           </div>
           <div class="grid-cards">
-            <img src="assets/icons/target.svg" alt="" class="icon">
+            <img src="assets/icons/accessibility.svg" alt="ícone de acessibilidade" class="icon">
             <h4>SEO e Acessibilidade</h4>
             <p>Descubra como a acessibilidade está diretamente relacionada ao SEO..</p>
           </div>
           <div class="grid-cards">
-            <img src="assets/icons/target.svg" alt="" class="icon">
+            <img src="assets/icons/link.svg" alt="ícone de link" class="icon">
             <p>Aumente a autoridade do seu site com estratégias de backlinks.</p>
           </div>
           <img src="" alt="">
@@ -114,6 +114,36 @@
           <p>Estamos empolgados para tê-lo conosco nessa jornada. Se precisar de algo, não hesite em nos contatar!</p>
 
         </div>
+      </section>
+      <section class="social-media">
+        <div class="media">
+          <div class="social-media-title">
+            <h3>Agora é <span>IMPORTANTE</span> que você:</h3>
+          </div>
+          <div class="social-media-grid">
+            <div class="grid-media">
+              <img src="assets/icons/Discord.svg" alt="ícone do Discord" class="icon">
+              <h4>Entre na comunidade do Discord</h4>
+              <p>Clique no botão abaixo para ter acesso ao grupo no discord.</p>
+              <button>Grupo do Discord</button>
+            </div>
+            <div class="grid-media">
+              <img src="assets/icons/Linkedin.svg" alt="ícone do Linkedin" class="icon">
+              <h4>Assine nossa Newsletter no LinkedIn</h4>
+              <p>Clique no botão abaixo para ter acesso à nossa newsletter.</p>
+              <button>Na Trilha do Dev</button>
+            </div>
+            <div class="grid-media">
+              <img src="assets/icons/Instagram.svg" alt="" class="icon">
+              <h4>Siga nosso perfil no Instagram</h4>
+              <p>Clique no botão abaixo para nos seguir no instagram. </p>
+              <button>@natrilhadodev</button>
+            </div>
+          </div>
+      </section>
+      <section class="whatsapp">
+        <h1>Entre em nossa comunidade do Whatsapp</h1>
+        <button>Link do Grupo</button>
       </section>
     </main>
 </body>
