adding mentoria-page and media-queries

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
       <section class="hero"> 
-          <img src="assets/images/logo.png" alt="">
+          <img src="assets/images/logo.png" alt="logo na trilha do dev">
         <div class="content">
           <h1>
             Ficar travado na programação é normal. <br>
@@ -23,8 +23,11 @@
             Participe da mentoria gratuita para devs iniciantes 
             e ganhe direção, <br>apoio e um plano de evolução feito pra quem tá começando.
           </p>
-        </div>        
-        <button>Inscreva-se na mentoria</button>  
+        </div>
+        <a href="">
+          <button>Inscreva-se na mentoria</button> 
+        </a>        
+         
       </section>
       <section class="container">
         <h2>O que você vai aprender</h2>
@@ -73,7 +76,10 @@
           Reproduzir o layout com fidelidade, aplicando boas práticas de HTML, CSS e JavaScript (ou a stack que você estiver aprendendo). 
           É mais que um exercício: é um passo real rumo ao seu portfólio profissional.
           </p>
-          <button>Cadastre-se</button>
+          <a href="">
+            <button>Cadastre-se</button>
+          </a>
+          
         </div>  
       </section>
       <section class="learning-topics">
@@ -105,46 +111,7 @@
           </div>
         </div>
       </section>
-      <section class="congratulations">
-        <div class="text-background">
-          <h1>Parabéns!</h1>
-          <p>Obrigado por se inscrever! Em breve, você receberá 
-            conteúdos exclusivos e dicas valiosas para otimizar seu site. Fique atento ao seu e-mail!
-          </p> 
-          <p>Estamos empolgados para tê-lo conosco nessa jornada. Se precisar de algo, não hesite em nos contatar!</p>
 
-        </div>
-      </section>
-      <section class="social-media">
-        <div class="media">
-          <div class="social-media-title">
-            <h3>Agora é <span>IMPORTANTE</span> que você:</h3>
-          </div>
-          <div class="social-media-grid">
-            <div class="grid-media">
-              <img src="assets/icons/Discord.svg" alt="ícone do Discord" class="icon">
-              <h4>Entre na comunidade do Discord</h4>
-              <p>Clique no botão abaixo para ter acesso ao grupo no discord.</p>
-              <button>Grupo do Discord</button>
-            </div>
-            <div class="grid-media">
-              <img src="assets/icons/Linkedin.svg" alt="ícone do Linkedin" class="icon">
-              <h4>Assine nossa Newsletter no LinkedIn</h4>
-              <p>Clique no botão abaixo para ter acesso à nossa newsletter.</p>
-              <button>Na Trilha do Dev</button>
-            </div>
-            <div class="grid-media">
-              <img src="assets/icons/Instagram.svg" alt="" class="icon">
-              <h4>Siga nosso perfil no Instagram</h4>
-              <p>Clique no botão abaixo para nos seguir no instagram. </p>
-              <button>@natrilhadodev</button>
-            </div>
-          </div>
-      </section>
-      <section class="whatsapp">
-        <h1>Entre em nossa comunidade do Whatsapp</h1>
-        <button>Link do Grupo</button>
-      </section>
     </main>
 </body>
 </html>
