--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main>
-      <section class="hero"> 
+  <main>
+    <section class="hero"> 
           <img src="assets/images/logo.png" alt="logo na trilha do dev">
         <div class="content">
           <h1>
@@ -28,8 +28,8 @@
           <button>Inscreva-se na mentoria</button> 
         </a>        
          
-      </section>
-      <section class="container">
+    </section>
+    <section class="container">
         <h2>O que você vai aprender</h2>
         <div class="grid">
           <div class="grid-cards">
@@ -63,12 +63,12 @@
           </div>
           <img src="" alt="">
         </div>
-      </section>
-      <section class="challenge">
-        <figure>  
-          <img src="assets/images/trilha-challenge.png" alt="">
-        </figure>
-        <div class="content-challenge">          
+    </section>
+    <section class="challenge">
+      <figure>  
+        <img src="assets/images/trilha-challenge.png" alt="">
+      </figure>
+      <div class="content-challenge">          
           <h1>#TrilhaChallenge</h1>
           <p>O #TrilhaChallenge é uma experiência prática onde você vai transformar um layout profissional em um site funcional — 
           do jeitinho que acontece no mercado. <br>
@@ -80,9 +80,9 @@
             <button>Cadastre-se</button>
           </a>
           
-        </div>  
-      </section>
-      <section class="learning-topics">
+      </div>  
+    </section>
+    <section class="learning-topics">
         <div class="box-content">
           <div class="title-box">
             <h4>O que vou aprender no desafio?</h4>
@@ -110,8 +110,15 @@
           <div class="footer-box">
           </div>
         </div>
-      </section>
-
-    </main>
+    </section>
+  </main>
+  <footer>
+      <h4>Este projeto foi desenvolvido na #TrilhaChallenge por 
+        <a href="https://github.com/elidepaixao">Elide Paixão</a>
+      </h4>
+      <a href="https://www.instagram.com/natrilhadodev/" target="_blank" rel="noopener noreferrer">@natrilhadodev</a>
+  </footer>
+  <script src="main.js"></script>  
+  </script>
 </body>
 </html>
