--- a/mentoria.html
+++ b/mentoria.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <main>
-          <section class="congratulations">
+    <section class="congratulations">
         <div class="text-background">
           <h1>Parabéns!</h1>
           <p>Obrigado por se inscrever! Em breve, você receberá 
@@ -21,8 +21,8 @@
           <p>Estamos empolgados para tê-lo conosco nessa jornada. Se precisar de algo, não hesite em nos contatar!</p>
 
         </div>
-      </section>
-      <section class="social-media">
+    </section>
+    <section class="social-media">
         <div class="media">
           <div class="social-media-title">
             <h3>Agora é <span>IMPORTANTE</span> que você:</h3>
@@ -54,11 +54,15 @@
              
             </div>
           </div>
-      </section>
-      <section class="whatsapp">
+    </section>
+    <section class="whatsapp">
         <h1>Entre em nossa comunidade do Whatsapp</h1>
         <a href="">
           <button>Link do Grupo</button>
         </a>
         
-      </section>
+    </section>
+  </main>
+  <script src="mentoria.js"></script>
+</body>
+</html>
