adding data-action

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             e ganhe direção, <br>apoio e um plano de evolução feito pra quem tá começando.
           </p>
         </div>
-        <a href="">
+        <a href="#" data-action="mentoria">
           <button>Inscreva-se na mentoria</button> 
         </a>        
          
@@ -76,7 +76,7 @@
           Reproduzir o layout com fidelidade, aplicando boas práticas de HTML, CSS e JavaScript (ou a stack que você estiver aprendendo). 
           É mais que um exercício: é um passo real rumo ao seu portfólio profissional.
           </p>
-          <a href="">
+          <a href="#" data-action="mentoria">
             <button>Cadastre-se</button>
           </a>
           
